liberity-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liberity-ap
  namespace: liberity-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liberity-ap
  template:
    metadata:
      labels:
        app: liberity-ap
    spec:
      containers:
        - name: liberity-ap
          image: docker.io/georgechiu/liberity:v1
          ports:
            - containerPort: 9080
