liberity-dev/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: liberity-ap-service
  namespace: liberity-dev
spec:
  selector:
    app: liberity-ap
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
  type: ClusterIP
