liberity-dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: liberity-route
  namespace: liberity-dev
spec:
  to:
    kind: Service
    name: liberity-ap-service
  port:
    targetPort: 9080
  tls:
    termination: edge
  wildcardPolicy: None
